--- a/views/admin/incidents.pug
+++ b/views/admin/incidents.pug
@@ -11,12 +11,18 @@ block admin-content
 				each incident in incidents
 					li(data-id=incident.id, data-name=incident.summary)
 						span
-							i.fa.fa-copy
+							case incident.state
+								when open: i.fa.fa-copy
+								when scheduled: i.fa.fa-clock
+								default: i.fa.fa-times
 							p
 								strong= incident.summary
 								span= incident.state
 						span
-							a(href='/admin/incidents/' + incident.id): i.fa.fa-edit
+							a.btn.btn-blue(href='/admin/incidents/' + incident.id)
+								span
+									i.fa.fa-rocket
+									| Post Update
 							i.fa.fa-trash-o.delete-action
 		else
 			.admin-box
