Added timezone reference selector for incident creation

--- a/client/css/components/_button.scss
+++ b/client/css/components/_button.scss
@@ -63,6 +63,13 @@
 		width: 100%;
 	}
 
+	&.btn-solo {
+		.fa {
+			margin-right: 0;
+			font-size: 14px;
+		}
+	}
+
 	// span container required for firefox not handling flexbox on buttons!
 	> span {
 		display: inline-flex;
