--- a/client/css/components/_dropdown.scss
+++ b/client/css/components/_dropdown.scss
@@ -70,12 +70,16 @@
 		position: absolute;
 		top: 39px;
 		width: 100%;
+		max-height: 40vh;
+		overflow: scroll;
+		overflow-x: hidden;
+		overflow-y: scroll;
 		z-index: 2;
 
 		> li {
 			display: flex;
 			align-items: center;
-			padding: 0 10px;
+			padding: 0 25px 0 10px;
 			height: 35px;
 			border-top: 1px dotted material-color('blue-grey', '100');
 			font-weight: 600;
