Added Admin Dashboard + Settings page layout + Font change

--- a/client/css/components/_button.scss
+++ b/client/css/components/_button.scss
@@ -12,9 +12,9 @@
 	display: inline-flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
-	font-family: 'Open Sans', sans-serif;
-	font-size: 12px;
-	font-weight: 600;
+	font-family: 'Mukta Vaani', sans-serif;
+	font-size: 14px;
+	font-weight: 500;
 	letter-spacing: 0.5px;
 	margin: 0;
 	outline: none;
@@ -84,7 +84,7 @@
 		font-size: 12px;
 		font-weight: normal;
 		line-height: 12px;
-		margin-top: 2px;
+		//margin-top: 2px;
 	}
 
 }
