--- a/views/admin/sd.pug
+++ b/views/admin/sd.pug
@@ -36,7 +36,7 @@ ul.admin-sd
 		| API
 	li(data-link='/admin/settings')
 		i.fa.fa-gear
-		| Settings
+		| Site Settings
 
 a.btn.btn-light-blue.btn-block(href='/')
 	span
