--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,7 @@ html
 			link(rel='icon', type='image/png', sizes=favsize + 'x' + favsize href='/images/favicon-' + favsize + 'x' + favsize + '.png')
 
 		// CSS
-		link(type='text/css', rel='stylesheet', href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700|Inconsolata|Material+Icons')
+		link(type='text/css', rel='stylesheet', href='https://fonts.googleapis.com/css?family=Mukta+Vaani:300,400,500,700|Inconsolata')
 		link(type='text/css', rel='stylesheet', href='/css/libs.css')
 		link(type='text/css', rel='stylesheet', href='/css/app.css')
 
