--- a/views/admin/dashboard.pug
+++ b/views/admin/dashboard.pug
@@ -2,7 +2,45 @@ extends ./layout
 
 block admin-header
 	i.fa.fa-th-large
-	| Dashboard
+	| Dashboard | Welcome #{user.firstName}
+
+block admin-actions
+	a.btn.btn-indigo(href='/admin/account')
+		span
+			i.fa.fa-user
+			| My Account
 
 block admin-content
-	| Welcome #{user.firstName}
+	#admin-dashboard
+		if comps
+			ul.admin-headlist-simple
+				each grp in groups
+					li
+						h2
+							i.fa.fa-object-group
+							= grp.name
+						ul.admin-list
+							if _.has(comps, 'g_' + grp.id)
+								each comp in _.get(comps, 'g_' + grp.id)
+									- var curCompId = 'state_' + comp._id.toString();
+									li(data-id=comp._id.toString(), data-state=comp.state)
+										span
+											strong= comp.name
+										span
+											input(id=curCompId + '_ok', name=curCompId, type='radio', v-model=curCompId, value='ok')
+											label(for=curCompId + '_ok') Operational
+											input(id=curCompId + '_perfissues', name=curCompId, type='radio', v-model=curCompId, value='perfissues')
+											label(for=curCompId + '_perfissues') Performance Issues
+											input(id=curCompId + '_partialdown', name=curCompId, type='radio', v-model=curCompId, value='partialdown')
+											label(for=curCompId + '_partialdown') Partial Outage
+											input(id=curCompId + '_majordown', name=curCompId, type='radio', v-model=curCompId, value='majordown')
+											label(for=curCompId + '_majordown') Major Outage
+			.admin-form
+				section.form-footer
+					button.btn.btn-green#admin-dashboard-save
+						span
+							i.fa.fa-check
+							| Save Components State
+		else
+			.admin-box
+				| No components have been configured yet.
