Remove Google Fonts + replaced by Poppins & Open Sans hosted fonts

--- a/client/css/app.scss
+++ b/client/css/app.scss
@@ -2,6 +2,7 @@
 @import './material/_sass-material-colors';
 @import './material/_sass-material-colors-classes';
 
+@import './layout/_fonts';
 @import './layout/_common';
 @import './layout/_header';
 @import './layout/_footer';
