--- a/views/admin/incidents.pug
+++ b/views/admin/incidents.pug
@@ -11,7 +11,7 @@ block admin-actions
 	a.btn.btn-indigo(href='/admin/incidents/archive')
 		span
 			i.fa.fa-archive
-			| Archived incidents
+			span Archived incidents
 
 block admin-content
 	#admin-incidents
