--- a/views/admin/regions.pug
+++ b/views/admin/regions.pug
@@ -18,7 +18,8 @@ block admin-content
 					li(data-id=region._id, data-name=region.name)
 						span
 							i.fa.fa-sort.handle
-							= region.name
+							p
+								strong= region.name
 						span
 							i.fa.fa-edit.edit-action
 							i.fa.fa-trash-o.delete-action
