--- a/client/css/components/_button.scss
+++ b/client/css/components/_button.scss
@@ -1,7 +1,6 @@
 .btn {
 	@include prefix(box-shadow, 0 0 5px 0 rgba(0,0,0,0.1));
 	@include prefix(user-select, none);
-	align-items: center;
 	background-image: none;
 	background-color: material-color('blue-grey', '200');
 	border-radius: 4px;
@@ -9,21 +8,17 @@
 	box-sizing: border-box;
 	color: #FFF;
 	cursor: pointer;
-	display: inline-flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	font-family: 'Mukta Vaani', sans-serif;
-	font-size: 14px;
-	font-weight: 500;
-	letter-spacing: 0.5px;
+	display: inline-block;
+	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+	font-size: 12px;
+	font-weight: 600;
+	letter-spacing: 0.7px;
 	margin: 0;
 	outline: none;
 	padding: 0 12px;
-	height: 30px;
 	text-align: center;
 	text-transform: uppercase;
 	transition: all 0.4s ease;
-	vertical-align: middle;
 	white-space: nowrap;
 
 	@each $color-name, $color-variants in $material-colors {
@@ -73,6 +68,7 @@
 	// span container required for firefox not handling flexbox on buttons!
 	> span {
 		display: inline-flex;
+		height: 30px;
 		flex-direction: row;
 		flex-wrap: nowrap;
 		align-items: center;
