--- a/client/css/components/_incidents-list.scss
+++ b/client/css/components/_incidents-list.scss
@@ -28,13 +28,13 @@
 			@include status-colors('border-bottom-color', -2);
 
 			span {
-				font-size: 16px;
+				font-size: 14px;
 				font-weight: 500;
 				color: #FFF;
 			}
 
 			.fa {
-				font-size: 16px;
+				font-size: 14px;
 				font-weight: 400;
 				display: inline-block;
 			}
@@ -52,11 +52,10 @@
 	list-style-type: none;
 
 	li {
-		font-size: 13px;
+		font-size: 12px;
 		padding: 0;
 
 		strong {
-			font-size: 12px;
 			font-weight: 500;
 			text-transform: uppercase;
 			color: material-color('blue-grey','600');
@@ -91,6 +90,7 @@
 			font-size: 14px;
 			color: material-color('blue-grey','700');
 			margin-right: 5px;
+			font-weight: 500;
 
 			&::after {
 				content: ' \2014';
