--- a/client/css/layout/_common.scss
+++ b/client/css/layout/_common.scss
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-	font-family: 'Mukta Vaani', sans-serif;
+	font-family: 'Poppins', Helvetica, Arial, sans-serif;
 	margin: 0;
 	padding: 0;
 	height: 100%;
