--- a/views/admin/metrics.pug
+++ b/views/admin/metrics.pug
@@ -5,7 +5,7 @@ block admin-header
 	| Metrics
 
 block admin-actions
-	button.btn.btn-teal
+	a.btn.btn-teal(href='/admin/metrics/create')
 		span
 			i.fa.fa-plus
 			| Create New Metric
