--- a/client/css/components/_button.scss
+++ b/client/css/components/_button.scss
@@ -84,3 +84,25 @@
 	}
 
 }
+
+.btn-group {
+	display: inline-flex;
+
+	> .btn {
+		margin-left: 1px;
+		border-radius: 0;
+
+		&:first-child {
+			margin-left: 0;
+			border-top-left-radius: 4px;
+			border-bottom-left-radius: 4px;
+		}
+
+		&:last-child {
+			border-top-right-radius: 4px;
+			border-bottom-right-radius: 4px;
+		}
+
+	}
+
+}
