--- a/views/common/header.pug
+++ b/views/common/header.pug
@@ -8,24 +8,4 @@ header
 				span
 					i.fa.fa-bell
 					| Subscribe
-	nav
-		ul
-			li
-				span Web Apps
-				i.fa.fa-check.status-ok
-			li
-				span Communications
-				i.fa.fa-clock-o.status-scheduled
-			li
-				span Network
-				i.fa.fa-minus-square.status-perfissues
-			li
-				span Data Storage
-				i.fa.fa-exclamation-triangle.status-partialdown
-			li
-				span Cloud
-				i.fa.fa-circle.status-majordown
-			//-each menuitem, menukey in appdata.navbar
-				li(data-key=menukey, class=(navbar_active == menukey ? 'active' : ''), data-link=menuitem.target)
-					i.material-icons= menuitem.icon
-					= t('nav.' + menukey)
+	block header
