--- a/views/admin/layout.pug
+++ b/views/admin/layout.pug
@@ -3,6 +3,9 @@ extends ../layout
 block head
 	script(type='text/javascript', src='/js/admin.js')
 
+block navright
+	span Administration
+
 block content
 	.admin
 		.grid
