--- a/views/common/header.pug
+++ b/views/common/header.pug
@@ -4,8 +4,5 @@ header
 		a(href='/'): img(src='/images/logo.png',alt="Logo")
 		div
 			i#notifload
-			button
-				span
-					i.fa.fa-bell
-					= t('actions.subscribe')
+			block navright
 	block header
