--- a/client/css/components/_regions-list.scss
+++ b/client/css/components/_regions-list.scss
@@ -1,8 +1,10 @@
 
 .regions-list {
-	padding: 0;
 	margin: 0;
 	list-style-type: none;
+	padding: 15px;
+	color: material-color('grey','500');
+	font-size: 14px;
 
 	li {
 		border-top: 1px dotted material-color('blue-grey','100');
