--- a/client/css/layout/_header.scss
+++ b/client/css/layout/_header.scss
@@ -26,6 +26,16 @@ header {
 
 		> div {
 			display: flex;
+
+			> span {
+				font-weight: 400;
+				letter-spacing: 0.5px;
+				text-transform: uppercase;
+				color: #FFF;
+				display: inline-block;
+				padding-right: 25px;
+			}
+
 		}
 
 		button {
@@ -80,7 +90,7 @@ header {
 				font-size: 14px;
 				font-weight: 400;
 				color: material-color('grey', '600');
-				cursor: pointer;
+				cursor: default;
 				transition: all 0.5s ease;
 
 				&:hover {
